@@ -1,0 +1,2 @@
+alice:s3cr3t
+bob:p4ssw0rd
